<resources>
    <string name="app_name">SoFia</string>
    <string name="home">Home</string>
    <string name="saldo">Saldo</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="message_login_page">Input Data</string>
    <string name="title_login_page">Login</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirmation Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="fab_view">fabView</string>
    <string name="message_judul">Input Item Product</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="jumlah_produk">Jumlah Produk</string>
    <string name="harga">Harga</string>
    <string name="save_product">Save Product</string>
    <string name="title_signup_page">Register</string>
    <string name="name">Name</string>
    <string name="signup">Register</string>
    <string name="image">image</string>
    <string name="loading">Loading...</string>
    <string name="empty_input">Please fill in the blank input</string>
    <string name="logout_desc">Are you sure want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="jumlah">Stok</string>
    <string name="no_data">No Data</string>
    <string name="retry">Retry Again</string>
    <string name="timeout">Timeout</string>
    <string name="detail_item">Detail Item</string>
    <string name="add_item">Add Item</string>

</resources>